--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -30,6 +30,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product Detail
             </a>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazure/demoProduct">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Demo Product
+            </NavLink>
+        </div>
     </nav>
 </div>
 
