--- a/LearnBlazor/Components/Pages/Counter.razor
+++ b/LearnBlazor/Components/Pages/Counter.razor
@@ -8,6 +8,8 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
+<_DeleteButtonComponent></_DeleteButtonComponent>
+
 @code {
     private int currentCount = 0;
 
