--- a/LearnBlazor/Components/Pages/Product/SharedComponents/_DeleteButtonComponent.razor
+++ b/LearnBlazor/Components/Pages/Product/SharedComponents/_DeleteButtonComponent.razor
@@ -1,1 +1,6 @@
-﻿<button type="button" class="btn btn-danger btn-sm">Delete</button>
+﻿<button type="button" class="btn btn-danger btn-sm">Delete - @ProductId</button>
+
+@code {
+    [Parameter]
+    public int ProductId { get; set; }
+}
