--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Demo Product
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="/parent">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parent/Child
+            </a>
+        </div>
     </nav>
 </div>
 
