Props drilling to child and grand child

--- a/LearnBlazor/Components/Pages/ParentComponent.razor
+++ b/LearnBlazor/Components/Pages/ParentComponent.razor
@@ -1,7 +1,7 @@
 ﻿@page "/parent"
 <h3>Parent Component</h3>
 
-<_ChildComponent Title="This is child page title 1" OnShowButtonClick="ShowMessage">
+<_ChildComponent Title="This is child page title 1" OnShowButtonClick="ShowMessage" GrandChildMessage="This message to Grand Child from parent component.">
     This is readonly and comes from Render Fragment
 </_ChildComponent>
 
