--- a/LearnBlazor/Components/Pages/ParentComponent.razor
+++ b/LearnBlazor/Components/Pages/ParentComponent.razor
@@ -1,18 +1,13 @@
 ﻿@page "/parent"
 <h3>Parent Component</h3>
 
-<_ChildComponent Title="This is child page title 1" OnShowButtonClick="ShowMessage" GrandChildMessage="This message to Grand Child from parent component.">
-    This is readonly and comes from Render Fragment
-</_ChildComponent>
-
-<_ChildComponent Title="This is child page title 2" OnShowButtonClick="ShowMessage">
-    <ChildContent>
-        This is from Child Content.
-    </ChildContent>
-    <ChildOtherContent>
-        <p class="text-bg-light">This is from other content.</p>
-    </ChildOtherContent>
-</_ChildComponent>
+<CascadingValue Value="@GrandChildMessage" Name="Message">
+    <CascadingValue Value="@TrackingNumber" Name="TrackingNumber">
+        <_ChildComponent Title="This is child page title 1" OnShowButtonClick="ShowMessage">
+            This is readonly and comes from Render Fragment
+        </_ChildComponent>
+    </CascadingValue>
+</CascadingValue>
 
 <div class="text-bg-dark">
     @ConfirmationMessage
@@ -20,6 +15,10 @@
 
 @code {
     public string ConfirmationMessage { get; set; } = string.Empty;
+
+    private string GrandChildMessage { get; set; } = "This message from Parent to Grand Child using Cascading Parameter.";
+
+    private string TrackingNumber { get; set; } = "TPN2023949483";
 
     private void ShowMessage()
     {
