--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -25,20 +25,29 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <a class="nav-link" href="/learnBlazure/propBinding">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product Detail
             </a>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnBlazure/demoProduct">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Demo Product
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <a class="nav-link" href="/parent">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parent/Child
             </a>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnroute">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Route
+            </NavLink>
         </div>
     </nav>
 </div>
