Navlink with Navlink match

--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -27,9 +27,9 @@
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/learnBlazure/propBinding">
+            <NavLink class="nav-link" href="/learnBlazure/propBinding">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product Detail
-            </a>
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
@@ -39,13 +39,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/parent">
+            <NavLink class="nav-link" href="/parent">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parent/Child
-            </a>
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/learnroute">
+            <NavLink class="nav-link" href="/learnroute" Match="NavLinkMatch.Prefix">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Route
             </NavLink>
         </div>
