--- a/LearnBlazor/Components/Pages/Product/LearningRoute.razor
+++ b/LearnBlazor/Components/Pages/Product/LearningRoute.razor
@@ -2,6 +2,7 @@
 @page "/learnroute/{TransactionId:int}/{Status}"
 @page "/learnroute/{TransactionId:int}"
 @page "/learnblazor/learnroute"
+@page "/learnroute/catch-all/{*PageParameters}"
 
 <h3>Learning Route</h3>
 
@@ -9,10 +10,17 @@ Transaction Id: <div class="badge bg-info">@TransactionId</div>
 <br />
 Status: <div class="badge bg-success">@Status</div>
 
+<div class="alert alert-secondary">
+    Page Parameters: @PageParameters
+</div>
+
 @code {
     [Parameter]
     public int? TransactionId { get; set; }
 
     [Parameter]
     public string? Status { get; set; }
+
+    [Parameter]
+    public string? PageParameters { get; set; }
 }
