--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -45,8 +45,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/learnroute" Match="NavLinkMatch.Prefix">
+            <NavLink class="nav-link" href="/learnroute#targetElement" Match="NavLinkMatch.Prefix">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Route
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnroute?PostalCode=6500&RoadNo=465" Match="NavLinkMatch.Prefix">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Route(Query Param)
             </NavLink>
         </div>
     </nav>
