Example of OnInitialized added

--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -28,30 +28,37 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnBlazure/propBinding">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product Detail
+                <span class="bi bi-collection-fill" aria-hidden="true"></span> Product Detail
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnBlazure/demoProduct">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Demo Product
+                <span class="bi bi-basket3-fill" aria-hidden="true"></span> Demo Product
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/parent">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parent/Child
+                <span class="bi bi-app" aria-hidden="true"></span> Parent/Child
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnroute#targetElement" Match="NavLinkMatch.Prefix">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Route
+                <span class="bi bi-arrow-left-right" aria-hidden="true"></span> Learn Route
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnroute?PostalCode=6500&RoadNo=465" Match="NavLinkMatch.Prefix">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Route(Query Param)
+                <span class="bi bi-arrow-left-right" aria-hidden="true"></span> Route(Query Param)
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/lifecycle" Match="NavLinkMatch.Prefix">
+                <span class="bi bi-arrow-clockwise" aria-hidden="true"></span> Life Cycle
             </NavLink>
         </div>
     </nav>
