--- a/LearnBlazor/Components/_Imports.razor
+++ b/LearnBlazor/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using LearnBlazor
 @using Models
 @using LearnBlazor.Components
-@using LearnBlazor.Components.Pages.Product.SharedComponents;
+@using LearnBlazor.Components.Pages.Product.SharedComponents
+@using LearnBlazor.Components.Pages.LifeCycle.Components
