--- a/LearnBlazor/Components/Pages/LifeCycle/LifeCycle.razor
+++ b/LearnBlazor/Components/Pages/LifeCycle/LifeCycle.razor
@@ -1,5 +1,7 @@
 ﻿@page "/lifecycle"
 
+@using System.Threading
+
 <PageTitle>Life Cycle</PageTitle>
 
 <h3 class="text-primary">Blazor LifeCycle</h3>
@@ -7,6 +9,11 @@
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+<p>
+    Time Count: @count <br />
+    <button class="btn btn-primary" @onclick="StartCountDown">Start Count Down</button>
+</p>
 
 <div class="text-bg-light">
     <_LifeCycleChildComponent CounterValue=@currentCount></_LifeCycleChildComponent>
@@ -20,6 +27,8 @@
 
 @code {
     private int currentCount = 0;
+
+    private int count = 5;
 
     private List<string> LifeCycleEvents = new();
 
@@ -50,5 +59,37 @@
     {
         this.LifeCycleEvents.Add("Parent: OnParametersSet have been called");
         base.OnParametersSet();
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if(firstRender)
+        {
+            this.currentCount = 100;
+        } else
+        {
+            this.currentCount = 200;
+        }
+        this.LifeCycleEvents.Add("Parent: OnAfterRender have been called");
+    }
+
+    protected override bool ShouldRender()
+    {
+        this.LifeCycleEvents.Add("Parent: ShouldRender have been called");
+        return true;
+    }
+
+    private void StartCountDown()
+    {
+        var timer = new Timer(this.TimerCallback, null, 1000, 1000);
+    }
+
+    private void TimerCallback(object state)
+    {
+        if(count > 0)
+        {
+            count--;
+            InvokeAsync(StateHasChanged);
+        }
     }
 }
