--- a/BlazorAppSSR/Components/Layout/NavMenu.razor
+++ b/BlazorAppSSR/Components/Layout/NavMenu.razor
@@ -19,6 +19,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
     </nav>
 </div>
 
