--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -61,6 +61,12 @@
                 <span class="bi bi-arrow-clockwise" aria-hidden="true"></span> Life Cycle
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/product-forms">
+                <span class="bi bi-arrow-clockwise" aria-hidden="true"></span> Product Forms
+            </NavLink>
+        </div>
     </nav>
 </div>
 
