Add category and add list to page

--- a/Blazor.ECommerce/Components/_Imports.razor
+++ b/Blazor.ECommerce/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using Blazor.ECommerce
 @using Blazor.ECommerce.Components
+@using Blazor.ECommerce.Repositories
+@using Blazor.ECommerce.Repositories.IRepositories
+@using Blazor.ECommerce.Data;
