--- a/Blazor.ECommerce/Components/Layout/NavMenu.razor
+++ b/Blazor.ECommerce/Components/Layout/NavMenu.razor
@@ -19,8 +19,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="category">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Category
             </NavLink>
         </div>
 
