--- a/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
+++ b/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
@@ -21,7 +21,7 @@
         <div class="card-body p-4">
             <div class="row pb-3">
                 <div class="col-12 text-end">
-                    <button class="btn btn-secondary w-200">Add New Category</button>
+                    <a href="/category/create" class="btn btn-secondary w-200"><i class="bi bi-plus-square"></i> Add New Category</a>
                 </div>
             </div>
             <table class="table table-bordered table-hover table-sm">
@@ -36,7 +36,10 @@
                     {
                         <tr>
                             <td>@cat.Name</td>
-                            <td><button class="btn btn-sm btn-link">Edit</button></td>
+                            <td>
+                                <a class="btn btn-sm btn-info" href=@($"category/update/{@cat.Id}")><i class="bi bi-pencil-square"></i> Edit</a>
+                                <button class="btn btn-sm btn-danger"><i class="bi bi-trash3"></i> Delete</button>
+                            </td>
                         </tr>
                     }
                 </tbody>
