--- a/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/Components/Layout/NavMenu.razor
@@ -46,25 +46,25 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnroute#targetElement" Match="NavLinkMatch.Prefix">
-                <span class="bi bi-arrow-left-right" aria-hidden="true"></span> Learn Route
+                <i class="bi bi-arrow-left-right" aria-hidden="true"></i> Learn Route
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnroute?PostalCode=6500&RoadNo=465" Match="NavLinkMatch.Prefix">
-                <span class="bi bi-arrow-left-right" aria-hidden="true"></span> Route(Query Param)
+                <i class="bi bi-arrow-left-right" aria-hidden="true"></i> Route(Query Param)
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/lifecycle" Match="NavLinkMatch.Prefix">
-                <span class="bi bi-arrow-clockwise" aria-hidden="true"></span> Life Cycle
+                <i class="bi bi-arrow-clockwise" aria-hidden="true"></i> Life Cycle
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/product-forms">
-                <span class="bi bi-arrow-clockwise" aria-hidden="true"></span> Product Forms
+                <i class="bi bi-arrow-clockwise" aria-hidden="true"></i> Product Forms
             </NavLink>
         </div>
     </nav>
