--- a/Blazor.ECommerce/Components/_Imports.razor
+++ b/Blazor.ECommerce/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using Blazor.ECommerce.Repositories
 @using Blazor.ECommerce.Repositories.IRepositories
 @using Blazor.ECommerce.Data;
+@using Blazor.ECommerce.Services.Extensions;
