--- a/Blazor.ECommerce/Components/App.razor
+++ b/Blazor.ECommerce/Components/App.razor
@@ -22,6 +22,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="js/notification.js"></script>
+    <script src="js/common.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
