--- a/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
+++ b/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
@@ -2,6 +2,7 @@
 
 
 @inject ICategoryRepository categoryRepository;
+@inject IJSRuntime jsRuntime;
 
 @if (IsLoading)
 {
@@ -38,7 +39,7 @@
                             <td>@cat.Name</td>
                             <td>
                                 <a class="btn btn-sm btn-info" href=@($"category/update/{@cat.Id}")><i class="bi bi-pencil-square"></i> Edit</a>
-                                <button class="btn btn-sm btn-danger"><i class="bi bi-trash3"></i> Delete</button>
+                                <button type="button" class="btn btn-sm btn-danger" @onclick="@(()=> OnDelete(@cat.Id))"><i class="bi bi-trash3"></i> Delete</button>
                             </td>
                         </tr>
                     }
@@ -49,6 +50,8 @@
         {
             <p>Edited Successfully.</p>
         }
+        <BsModal OnModalClose="DeleteCategory" Title="Are you sure you want to delete this Category?" 
+            ButtonBootstrapStyle="btn-danger" ButtonText="Delete"/>
     </div>
 }
 
@@ -58,6 +61,8 @@
     private Boolean ShowMessage { get; set; } = false;
 
     private IEnumerable<Category> Categories = new List<Category>();
+
+    public int SelectedCategoryId { get; set; } = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -77,5 +82,38 @@
             IsLoading = false;
             StateHasChanged();
         } 
+    }
+
+    private async Task OnDelete(int categoryId)
+    {
+        this.SelectedCategoryId = categoryId;
+        await jsRuntime.InvokeVoidAsync("showConfirmationModal");
+    }
+
+    private async Task DeleteCategory(bool isConfirmed)
+    {
+        IsLoading = true;
+        StateHasChanged();
+        await jsRuntime.InvokeVoidAsync("hideConfirmationModal");
+        if (isConfirmed && SelectedCategoryId > 0)
+        {
+            var isDeleted = await this.categoryRepository.DeleteAsync(SelectedCategoryId);
+
+            if (isDeleted)
+            {
+                await jsRuntime.ToastrSuccess("Category deleted successfully.");
+                await this.LoadCategories();
+                this.SelectedCategoryId = 0;
+            }
+            else
+            {
+                await jsRuntime.ToastrError("Category can not be deleted.");
+            }
+
+        }
+
+        IsLoading = false;
+
+        StateHasChanged();
     }
 }
