--- a/Blazor.ECommerce/Components/_Imports.razor
+++ b/Blazor.ECommerce/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using Blazor.ECommerce.Repositories.IRepositories
 @using Blazor.ECommerce.Data;
 @using Blazor.ECommerce.Services.Extensions;
+@using Blazor.ECommerce.Components.Shared;
