Change dialog position

--- a/Blazor.ECommerce/Components/Shared/BsModal.razor
+++ b/Blazor.ECommerce/Components/Shared/BsModal.razor
@@ -1,5 +1,5 @@
 ﻿<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="confirmationModalLabel">@Title</h1>
