--- a/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
+++ b/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
@@ -44,6 +44,11 @@ else
                         <ValidationMessage For="@(() => Product.Price)" />
                     </div>
                     <div class="form-group py-3 col-12">
+                        <label class="form-label">Special Tag</label>
+                        <InputText class="form-control" @bind-Value="Product.SpecialTag" />
+                        <ValidationMessage For="@(() => Product.SpecialTag)" />
+                    </div>
+                    <div class="form-group py-3 col-12">
                         <label class="form-label">Category</label>
                         <InputSelect class="form-select" @bind-Value="Product.CategoryId">
                             <option value="0" disabled selected>Select Category</option>
@@ -55,9 +60,22 @@ else
                         <ValidationMessage For="@(() => Product.CategoryId)" />
                     </div>
                     <div class="form-group py-3 col-12">
-                        <label class="form-label">Upload Image</label>
-                        <InputFile class="form-control" @bind-Value="Product.Price" accept="image/x-png,image/jpeg" OnChange="LoadFiles"/>
-                        <ValidationMessage For="@(() => Product.ImageUrl)" />
+                        @if (Product.ImageUrl == null)
+                        {
+                            <label class="form-label">Upload Image</label>
+                            <InputFile class="form-control" @bind-Value="Product.Price" accept="image/x-png,image/jpeg" OnChange="LoadFiles"></InputFile>
+                        }
+                        @if (Product.ImageUrl != null)
+                        {
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="@Product.ImageUrl" alt="@Product.Name" class="img-thumbnail"/>
+                                </div>
+                                <div class="col-md-9">
+                                    <i class="bi bi-trash btn btn-outline-danger" @onclick="DeleteImage">Remove</i>
+                                </div>
+                            </div>
+                        }
                     </div>
                     <div class="row mt-3">
                         <div class="col col-md-3">
@@ -143,7 +161,7 @@ else
 
         FileInfo fileInfo = new (file.Name);
 
-        var newFileName = $"{Guid.NewGuid()}.{fileInfo.Extension}";
+        var newFileName = $"{Guid.NewGuid()}{fileInfo.Extension}";
 
         if (!Directory.Exists(_directoryPath))
         {
@@ -152,15 +170,43 @@ else
 
         var path = Path.Combine(_directoryPath, newFileName);
 
-        await using (var stream = file.OpenReadStream(maxAllowedSize: 10 * 1024 * 1024))
+        try
         {
-            await using (var fileStream = new FileStream(path, FileMode.Create, FileAccess.Write))
+            await using (var stream = file.OpenReadStream(maxAllowedSize: 10 * 1024 * 1024))
             {
-                await stream.CopyToAsync(fileStream);
+                await using (var fileStream = new FileStream(path, FileMode.Create, FileAccess.Write))
+                {
+                    Product.ImageUrl = $"/images/product/{newFileName}";
+                    await stream.CopyToAsync(fileStream);
+                }
             }
         }
+        catch
+        {
+            jsRuntime.ToastrError("File is too large.");
+        }
+        finally
+        {
+            IsLoading = false;
+        }
+    }
 
-        IsLoading = false;
+    void DeleteImage()
+    {
+        if (Product.ImageUrl != null)
+        {
+            var imageName = Product.ImageUrl.Split('/').LastOrDefault();
+
+            var imageFullPath = Path.Combine(_directoryPath, imageName);
+
+            if (!File.Exists(imageFullPath))
+                return;
+
+            File.Delete(imageFullPath);
+
+            Product.ImageUrl = null;
+            return;
+        }
     }
 
 }
