Filter product and search by category done

--- a/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryUpsert.razor
+++ b/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryUpsert.razor
@@ -1,7 +1,7 @@
 ﻿@page "/category/create";
 @page "/category/update/{Id:int}"
 
-
+<PageTitle>Category</PageTitle>
 @inject ICategoryRepository categoryRepository;
 @inject NavigationManager navigationManager;
 @inject IJSRuntime jsRuntime;
