--- a/Blazor.ECommerce/Components/Pages/Home.razor
+++ b/Blazor.ECommerce/Components/Pages/Home.razor
@@ -13,9 +13,9 @@ else
     <div class="container-fluid px-0 m-0 full-width">
         <div class="jumbotron-custom">
             <div class="m-auto d-flex align-items-center" style="width: 400px; height: 50vh;">
-
                 <div class="d-flex align-items-center" style="width: 100%;">
                     <input type="text" class="form-control rounded-pill"
+                    @bind:event="oninput" @bind:get="_searchText" @bind:set="FilterProductsByName"
                            placeholder="Search for Food Items!"
                            style="width: 100%; padding: 20px;">
                     <span style="position: relative; left: -43px;"><i class="bi bi-search"></i></span>
@@ -26,12 +26,12 @@ else
         <div class="content px-4 m-2">
             <ul class="nav nav-underline justify-content-center mb-2">
                 <li class="nav-item">
-                    <span class="nav-link" href="#" style="cursor: pointer">All</span>
+                    <span class="nav-link @GetSelectedCategoryStyle(0)" href="#" style="cursor: pointer" @onclick="() => FilterProducts(0)">All</span>
                 </li>
                 @foreach (var cat in Categories)
                 {
                     <li class="nav-item">
-                        <span class="nav-link" href="#" style="cursor: pointer">@cat.Name</span>
+                        <span class="nav-link  @GetSelectedCategoryStyle(cat.Id)" href="#" style="cursor: pointer" @onclick="() => FilterProducts(cat.Id)">@cat.Name</span>
                     </li>
                 }
             </ul>
