--- a/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
+++ b/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
@@ -1,6 +1,8 @@
 ﻿@page "/product/create";
 @page "/product/update/{Id:int}"
 
+<PageTitle>Product</PageTitle>
+
 @inject IWebHostEnvironment _WebEnvironment;
 @inject IProductRepository productRepository;
 @inject ICategoryRepository CategoryRepository;
