--- a/Blazor.ECommerce/Components/Layout/NavMenu.razor
+++ b/Blazor.ECommerce/Components/Layout/NavMenu.razor
@@ -25,8 +25,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="product">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product
+            <NavLink class="nav-link p-2" href="product">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Product
             </NavLink>
         </div>
 
