--- a/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
+++ b/Blazor.ECommerce/Components/Pages/CategoryPages/CategoryList.razor
@@ -1,6 +1,6 @@
 ﻿ @page "/category"
 
-
+<PageTitle>Categories</PageTitle>
 @inject ICategoryRepository categoryRepository;
 @inject IJSRuntime jsRuntime;
 
