--- a/Blazor.ECommerce/Components/Pages/ProductPages/ProductList.razor
+++ b/Blazor.ECommerce/Components/Pages/ProductPages/ProductList.razor
@@ -1,5 +1,6 @@
 ﻿ @page "/product"
 
+ <PageTitle>Products</PageTitle>
 
 @inject IProductRepository productRepository;
 @inject IJSRuntime jsRuntime;
